--- a/teste.ipynb
+++ b/teste.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -121,34 +121,311 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Cd Consultora</th>\n",
+       "      <th>Nome CN</th>\n",
+       "      <th>Nível</th>\n",
+       "      <th>Ciclo Início</th>\n",
        "      <th>Setor</th>\n",
        "      <th>Grupo</th>\n",
-       "      <th>Pedido</th>\n",
+       "      <th>Débito</th>\n",
+       "      <th>Status CN</th>\n",
+       "      <th>Espaço Dig Aberto</th>\n",
+       "      <th>CN Bem Vinda</th>\n",
+       "      <th>Adimplente 1ª Parc</th>\n",
+       "      <th>Pedido Autônomo</th>\n",
+       "      <th>Treinamento</th>\n",
+       "      <th>Venda Digital</th>\n",
+       "      <th>Qt Passos</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>abcd</td>\n",
-       "      <td>12345</td>\n",
-       "      <td>sim</td>\n",
+       "      <td>1985574</td>\n",
+       "      <td>IVONE ESPINDOLA</td>\n",
+       "      <td>SEMENTE</td>\n",
+       "      <td>202214</td>\n",
+       "      <td>ESTRELAS DO MAR</td>\n",
+       "      <td>17259</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>I1</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2433710</td>\n",
+       "      <td>NORY CELESTE SAIS DE FERREIRA</td>\n",
+       "      <td>SEMENTE</td>\n",
+       "      <td>202219</td>\n",
+       "      <td>PAPAREIA DO CHUI</td>\n",
+       "      <td>9037</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>I4</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2747120</td>\n",
+       "      <td>MARIA JUANITA MORAES</td>\n",
+       "      <td>SEMENTE</td>\n",
+       "      <td>202218</td>\n",
+       "      <td>HORTENSIA</td>\n",
+       "      <td>8611</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>I3</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3234750</td>\n",
+       "      <td>NILCE JUSTIN FERRI</td>\n",
+       "      <td>BRONZE</td>\n",
+       "      <td>202215</td>\n",
+       "      <td>ESTRELAS DO MAR</td>\n",
+       "      <td>17307</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>I2</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3729010</td>\n",
+       "      <td>DANIELA FABIANA PEREIRA</td>\n",
+       "      <td>BRONZE</td>\n",
+       "      <td>202217</td>\n",
+       "      <td>HORTENSIA</td>\n",
+       "      <td>8608</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>I2</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9385</th>\n",
+       "      <td>307699820</td>\n",
+       "      <td>SHEILA DAMBROS</td>\n",
+       "      <td>SEMENTE</td>\n",
+       "      <td>202303</td>\n",
+       "      <td>TERRA DAS VIDEIRAS</td>\n",
+       "      <td>8652</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>ATIVA</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9386</th>\n",
+       "      <td>307760588</td>\n",
+       "      <td>CLAUDIA SANTOS</td>\n",
+       "      <td>SEMENTE</td>\n",
+       "      <td>202303</td>\n",
+       "      <td>PRINCESA DO SUL</td>\n",
+       "      <td>9075</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>ATIVA</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9387</th>\n",
+       "      <td>307764818</td>\n",
+       "      <td>LEONARDO DE MATOS DA ROSA</td>\n",
+       "      <td>SEMENTE</td>\n",
+       "      <td>202303</td>\n",
+       "      <td>BONS VENTOS</td>\n",
+       "      <td>10194</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>ATIVA</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9388</th>\n",
+       "      <td>307765733</td>\n",
+       "      <td>JHONATAN SOARES OLIVEIRA SILVA</td>\n",
+       "      <td>SEMENTE</td>\n",
+       "      <td>202303</td>\n",
+       "      <td>NOVO TEMPO</td>\n",
+       "      <td>8201</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>ATIVA</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9389</th>\n",
+       "      <td>307768538</td>\n",
+       "      <td>WESLEY RICARDO DOS REIS LIMA</td>\n",
+       "      <td>SEMENTE</td>\n",
+       "      <td>202303</td>\n",
+       "      <td>TERRA DAS VIDEIRAS</td>\n",
+       "      <td>8656</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>ATIVA</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>9390 rows × 15 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Setor  Grupo Pedido\n",
-       "0  abcd  12345    sim"
+       "      Cd Consultora                         Nome CN    Nível  Ciclo Início  \\\n",
+       "0           1985574                 IVONE ESPINDOLA  SEMENTE        202214   \n",
+       "1           2433710   NORY CELESTE SAIS DE FERREIRA  SEMENTE        202219   \n",
+       "2           2747120            MARIA JUANITA MORAES  SEMENTE        202218   \n",
+       "3           3234750              NILCE JUSTIN FERRI   BRONZE        202215   \n",
+       "4           3729010         DANIELA FABIANA PEREIRA   BRONZE        202217   \n",
+       "...             ...                             ...      ...           ...   \n",
+       "9385      307699820                  SHEILA DAMBROS  SEMENTE        202303   \n",
+       "9386      307760588                  CLAUDIA SANTOS  SEMENTE        202303   \n",
+       "9387      307764818       LEONARDO DE MATOS DA ROSA  SEMENTE        202303   \n",
+       "9388      307765733  JHONATAN SOARES OLIVEIRA SILVA  SEMENTE        202303   \n",
+       "9389      307768538    WESLEY RICARDO DOS REIS LIMA  SEMENTE        202303   \n",
+       "\n",
+       "                   Setor  Grupo Débito Status CN Espaço Dig Aberto  \\\n",
+       "0        ESTRELAS DO MAR  17259    NÃO        I1               SIM   \n",
+       "1       PAPAREIA DO CHUI   9037    NÃO        I4               SIM   \n",
+       "2              HORTENSIA   8611    NÃO        I3               SIM   \n",
+       "3        ESTRELAS DO MAR  17307    NÃO        I2               SIM   \n",
+       "4              HORTENSIA   8608    NÃO        I2               SIM   \n",
+       "...                  ...    ...    ...       ...               ...   \n",
+       "9385  TERRA DAS VIDEIRAS   8652    NÃO     ATIVA               SIM   \n",
+       "9386     PRINCESA DO SUL   9075    NÃO     ATIVA               SIM   \n",
+       "9387         BONS VENTOS  10194    NÃO     ATIVA               SIM   \n",
+       "9388          NOVO TEMPO   8201    NÃO     ATIVA               SIM   \n",
+       "9389  TERRA DAS VIDEIRAS   8656    NÃO     ATIVA               SIM   \n",
+       "\n",
+       "     CN Bem Vinda Adimplente 1ª Parc Pedido Autônomo Treinamento  \\\n",
+       "0             NÃO                SIM             SIM         NÃO   \n",
+       "1             NÃO                SIM             SIM         SIM   \n",
+       "2             NÃO                SIM             SIM         NÃO   \n",
+       "3             NÃO                SIM             SIM         NÃO   \n",
+       "4             NÃO                SIM             SIM         SIM   \n",
+       "...           ...                ...             ...         ...   \n",
+       "9385          NÃO                SIM             SIM         NÃO   \n",
+       "9386          NÃO                SIM             SIM         NÃO   \n",
+       "9387          NÃO                SIM             SIM         NÃO   \n",
+       "9388          NÃO                SIM             SIM         NÃO   \n",
+       "9389          NÃO                SIM             SIM         NÃO   \n",
+       "\n",
+       "     Venda Digital  Qt Passos  \n",
+       "0              NÃO          2  \n",
+       "1              NÃO          3  \n",
+       "2              NÃO          2  \n",
+       "3              NÃO          2  \n",
+       "4              NÃO          3  \n",
+       "...            ...        ...  \n",
+       "9385           NÃO          2  \n",
+       "9386           NÃO          2  \n",
+       "9387           NÃO          2  \n",
+       "9388           NÃO          2  \n",
+       "9389           NÃO          2  \n",
+       "\n",
+       "[9390 rows x 15 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df['Setor']=='abcd']"
+    "df = pd.read_csv('teste.csv', sep=';')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[(df['Setor']=='CORAÇÃO GAÚCHO') & (df['Grupo']==9146) & (df['Nível']=='BRONZE')]['Cd Consultora'].count()"
    ]
   },
   {
@@ -161,7 +438,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -177,7 +454,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.4"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "3ad933181bd8a04b432d3370b9dc3b0662ad032c4dfaa4e4f1596c548f763858"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
