--- a/teste.ipynb
+++ b/teste.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
        "[9390 rows x 15 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,6 +466,64 @@
    ],
    "source": [
     "7/43"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 9390 entries, 0 to 9389\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column              Non-Null Count  Dtype \n",
+      "---  ------              --------------  ----- \n",
+      " 0   Cd Consultora       9390 non-null   int64 \n",
+      " 1   Nome CN             9390 non-null   object\n",
+      " 2   Nível               9390 non-null   object\n",
+      " 3   Ciclo Início        9390 non-null   int64 \n",
+      " 4   Setor               9390 non-null   object\n",
+      " 5   Grupo               9390 non-null   int64 \n",
+      " 6   Débito              9390 non-null   object\n",
+      " 7   Status CN           9390 non-null   object\n",
+      " 8   Espaço Dig Aberto   9390 non-null   object\n",
+      " 9   CN Bem Vinda        9390 non-null   object\n",
+      " 10  Adimplente 1ª Parc  9390 non-null   object\n",
+      " 11  Pedido Autônomo     9390 non-null   object\n",
+      " 12  Treinamento         9390 non-null   object\n",
+      " 13  Venda Digital       9390 non-null   object\n",
+      " 14  Qt Passos           9390 non-null   int64 \n",
+      "dtypes: int64(4), object(11)\n",
+      "memory usage: 1.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9146"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int('9146')"
    ]
   },
   {
