--- a/teste.ipynb
+++ b/teste.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +64,7 @@
        "1  defg  67890    nao"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +399,7 @@
        "[9390 rows x 15 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +420,7 @@
        "7"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,10 +573,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.5 ms, sys: 0 ns, total: 1.5 ms\n",
+      "Wall time: 1.07 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([    0,  8180,  8186,  8188,  8201,  8203,  8205,  8207,  8210,\n",
+       "        8212,  8215,  8219,  8220,  8223,  8232,  8233,  8237,  8242,\n",
+       "        8248,  8255,  8256,  8257,  8261,  8271,  8273,  8275,  8278,\n",
+       "        8279,  8284,  8286,  8287,  8296,  8593,  8595,  8597,  8598,\n",
+       "        8601,  8603,  8605,  8608,  8609,  8610,  8611,  8613,  8615,\n",
+       "        8616,  8618,  8622,  8633,  8634,  8636,  8639,  8640,  8643,\n",
+       "        8644,  8646,  8647,  8650,  8652,  8656,  8660,  8662,  8664,\n",
+       "        8665,  8667,  8669,  8671,  8673,  8675,  8677,  8679,  8683,\n",
+       "        8684,  8685,  8694,  8695,  8699,  8701,  8706,  8709,  8715,\n",
+       "        8716,  8717,  8719,  8726,  8728,  8989,  8996,  8997,  8998,\n",
+       "        8999,  9001,  9003,  9005,  9010,  9015,  9017,  9019,  9020,\n",
+       "        9025,  9028,  9030,  9032,  9035,  9037,  9039,  9043,  9045,\n",
+       "        9046,  9049,  9051,  9052,  9054,  9056,  9060,  9063,  9066,\n",
+       "        9071,  9072,  9075,  9076,  9080,  9081,  9082,  9087,  9095,\n",
+       "        9097,  9099,  9111,  9113,  9115,  9118,  9119,  9120,  9121,\n",
+       "        9125,  9126,  9127,  9129,  9130,  9132,  9137,  9141,  9144,\n",
+       "        9146,  9148,  9157,  9160,  9292,  9293,  9305,  9308,  9333,\n",
+       "        9335,  9336,  9341,  9343,  9345,  9346,  9351, 10011, 10047,\n",
+       "       10110, 10163, 10194, 10245, 10444, 10495, 10602, 10639, 10644,\n",
+       "       10711, 10861, 10998, 11082, 11167, 11205, 11277, 11359, 11460,\n",
+       "       11621, 11922, 12257, 12534, 12725, 12768, 12814, 13231, 13298,\n",
+       "       13381, 13473, 13652, 14160, 14370, 14573, 15232, 15723, 15751,\n",
+       "       15819, 15855, 16097, 16185, 16192, 16193, 16555, 16660, 16690,\n",
+       "       16738, 16759, 16809, 16843, 16913, 16919, 17078, 17160, 17227,\n",
+       "       17251, 17259, 17307, 17500, 18150, 18250, 18451, 18727, 18949,\n",
+       "       19357])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "np.sort(df[\"Grupo\"].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2.31 ms, sys: 173 µs, total: 2.48 ms\n",
+      "Wall time: 2.39 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([    0,  8180,  8186,  8188,  8201,  8203,  8205,  8207,  8210,\n",
+       "        8212,  8215,  8219,  8220,  8223,  8232,  8233,  8237,  8242,\n",
+       "        8248,  8255,  8256,  8257,  8261,  8271,  8273,  8275,  8278,\n",
+       "        8279,  8284,  8286,  8287,  8296,  8593,  8595,  8597,  8598,\n",
+       "        8601,  8603,  8605,  8608,  8609,  8610,  8611,  8613,  8615,\n",
+       "        8616,  8618,  8622,  8633,  8634,  8636,  8639,  8640,  8643,\n",
+       "        8644,  8646,  8647,  8650,  8652,  8656,  8660,  8662,  8664,\n",
+       "        8665,  8667,  8669,  8671,  8673,  8675,  8677,  8679,  8683,\n",
+       "        8684,  8685,  8694,  8695,  8699,  8701,  8706,  8709,  8715,\n",
+       "        8716,  8717,  8719,  8726,  8728,  8989,  8996,  8997,  8998,\n",
+       "        8999,  9001,  9003,  9005,  9010,  9015,  9017,  9019,  9020,\n",
+       "        9025,  9028,  9030,  9032,  9035,  9037,  9039,  9043,  9045,\n",
+       "        9046,  9049,  9051,  9052,  9054,  9056,  9060,  9063,  9066,\n",
+       "        9071,  9072,  9075,  9076,  9080,  9081,  9082,  9087,  9095,\n",
+       "        9097,  9099,  9111,  9113,  9115,  9118,  9119,  9120,  9121,\n",
+       "        9125,  9126,  9127,  9129,  9130,  9132,  9137,  9141,  9144,\n",
+       "        9146,  9148,  9157,  9160,  9292,  9293,  9305,  9308,  9333,\n",
+       "        9335,  9336,  9341,  9343,  9345,  9346,  9351, 10011, 10047,\n",
+       "       10110, 10163, 10194, 10245, 10444, 10495, 10602, 10639, 10644,\n",
+       "       10711, 10861, 10998, 11082, 11167, 11205, 11277, 11359, 11460,\n",
+       "       11621, 11922, 12257, 12534, 12725, 12768, 12814, 13231, 13298,\n",
+       "       13381, 13473, 13652, 14160, 14370, 14573, 15232, 15723, 15751,\n",
+       "       15819, 15855, 16097, 16185, 16192, 16193, 16555, 16660, 16690,\n",
+       "       16738, 16759, 16809, 16843, 16913, 16919, 17078, 17160, 17227,\n",
+       "       17251, 17259, 17307, 17500, 18150, 18250, 18451, 18727, 18949,\n",
+       "       19357])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "df[\"Grupo\"].sort_values().unique()"
+   ]
   }
  ],
  "metadata": {
