remove 0 from grupo filter

--- a/teste.ipynb
+++ b/teste.ipynb
@@ -573,17 +573,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.5 ms, sys: 0 ns, total: 1.5 ms\n",
-      "Wall time: 1.07 ms\n"
+      "CPU times: user 1.52 ms, sys: 90 µs, total: 1.61 ms\n",
+      "Wall time: 1.24 ms\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "values = np.sort(df[\"Grupo\"].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
@@ -615,14 +626,156 @@
        "       19357])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%time\n",
-    "np.sort(df[\"Grupo\"].unique())"
+    "values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 8180,  8186,  8188,  8201,  8203,  8205,  8207,  8210,  8212,\n",
+       "        8215,  8219,  8220,  8223,  8232,  8233,  8237,  8242,  8248,\n",
+       "        8255,  8256,  8257,  8261,  8271,  8273,  8275,  8278,  8279,\n",
+       "        8284,  8286,  8287,  8296,  8593,  8595,  8597,  8598,  8601,\n",
+       "        8603,  8605,  8608,  8609,  8610,  8611,  8613,  8615,  8616,\n",
+       "        8618,  8622,  8633,  8634,  8636,  8639,  8640,  8643,  8644,\n",
+       "        8646,  8647,  8650,  8652,  8656,  8660,  8662,  8664,  8665,\n",
+       "        8667,  8669,  8671,  8673,  8675,  8677,  8679,  8683,  8684,\n",
+       "        8685,  8694,  8695,  8699,  8701,  8706,  8709,  8715,  8716,\n",
+       "        8717,  8719,  8726,  8728,  8989,  8996,  8997,  8998,  8999,\n",
+       "        9001,  9003,  9005,  9010,  9015,  9017,  9019,  9020,  9025,\n",
+       "        9028,  9030,  9032,  9035,  9037,  9039,  9043,  9045,  9046,\n",
+       "        9049,  9051,  9052,  9054,  9056,  9060,  9063,  9066,  9071,\n",
+       "        9072,  9075,  9076,  9080,  9081,  9082,  9087,  9095,  9097,\n",
+       "        9099,  9111,  9113,  9115,  9118,  9119,  9120,  9121,  9125,\n",
+       "        9126,  9127,  9129,  9130,  9132,  9137,  9141,  9144,  9146,\n",
+       "        9148,  9157,  9160,  9292,  9293,  9305,  9308,  9333,  9335,\n",
+       "        9336,  9341,  9343,  9345,  9346,  9351, 10011, 10047, 10110,\n",
+       "       10163, 10194, 10245, 10444, 10495, 10602, 10639, 10644, 10711,\n",
+       "       10861, 10998, 11082, 11167, 11205, 11277, 11359, 11460, 11621,\n",
+       "       11922, 12257, 12534, 12725, 12768, 12814, 13231, 13298, 13381,\n",
+       "       13473, 13652, 14160, 14370, 14573, 15232, 15723, 15751, 15819,\n",
+       "       15855, 16097, 16185, 16192, 16193, 16555, 16660, 16690, 16738,\n",
+       "       16759, 16809, 16843, 16913, 16919, 17078, 17160, 17227, 17251,\n",
+       "       17259, 17307, 17500, 18150, 18250, 18451, 18727, 18949, 19357])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "values[values > 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter_values = values > 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filter_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 8180,  8186,  8188,  8201,  8203,  8205,  8207,  8210,  8212,\n",
+       "        8215,  8219,  8220,  8223,  8232,  8233,  8237,  8242,  8248,\n",
+       "        8255,  8256,  8257,  8261,  8271,  8273,  8275,  8278,  8279,\n",
+       "        8284,  8286,  8287,  8296,  8593,  8595,  8597,  8598,  8601,\n",
+       "        8603,  8605,  8608,  8609,  8610,  8611,  8613,  8615,  8616,\n",
+       "        8618,  8622,  8633,  8634,  8636,  8639,  8640,  8643,  8644,\n",
+       "        8646,  8647,  8650,  8652,  8656,  8660,  8662,  8664,  8665,\n",
+       "        8667,  8669,  8671,  8673,  8675,  8677,  8679,  8683,  8684,\n",
+       "        8685,  8694,  8695,  8699,  8701,  8706,  8709,  8715,  8716,\n",
+       "        8717,  8719,  8726,  8728,  8989,  8996,  8997,  8998,  8999,\n",
+       "        9001,  9003,  9005,  9010,  9015,  9017,  9019,  9020,  9025,\n",
+       "        9028,  9030,  9032,  9035,  9037,  9039,  9043,  9045,  9046,\n",
+       "        9049,  9051,  9052,  9054,  9056,  9060,  9063,  9066,  9071,\n",
+       "        9072,  9075,  9076,  9080,  9081,  9082,  9087,  9095,  9097,\n",
+       "        9099,  9111,  9113,  9115,  9118,  9119,  9120,  9121,  9125,\n",
+       "        9126,  9127,  9129,  9130,  9132,  9137,  9141,  9144,  9146,\n",
+       "        9148,  9157,  9160,  9292,  9293,  9305,  9308,  9333,  9335,\n",
+       "        9336,  9341,  9343,  9345,  9346,  9351, 10011, 10047, 10110,\n",
+       "       10163, 10194, 10245, 10444, 10495, 10602, 10639, 10644, 10711,\n",
+       "       10861, 10998, 11082, 11167, 11205, 11277, 11359, 11460, 11621,\n",
+       "       11922, 12257, 12534, 12725, 12768, 12814, 13231, 13298, 13381,\n",
+       "       13473, 13652, 14160, 14370, 14573, 15232, 15723, 15751, 15819,\n",
+       "       15855, 16097, 16185, 16192, 16193, 16555, 16660, 16690, 16738,\n",
+       "       16759, 16809, 16843, 16913, 16919, 17078, 17160, 17227, 17251,\n",
+       "       17259, 17307, 17500, 18150, 18250, 18451, 18727, 18949, 19357])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_values = values[filter_values]\n",
+    "new_values"
    ]
   },
   {
